02_k8s/03_task_manager/02_backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: three-tier-app
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
  - port: 80
    targetPort: 3000
